--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "author": "Microsoft",
   "dependencies": {
+    "vss-web-extension-sdk": "^4.125.2"
+  },
+  "devDependencies": {
     "@types/jquery": "^2.0.48",
     "@types/q": "^0.0.32",
-    "ncp": "^2.0.0",
-    "rimraf": "^3.0.2",
+    "bower": "^1.8.8",
     "tfx-cli": "^0.8.3",
-    "typescript": "^4.0.5",
-    "vss-web-extension-sdk": "^4.125.2"
+    "typescript": "^4.0.5"
   }
 }
